--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     </head>
     <body>
         <section>
-            <img src="/media/bg.jpg" id="bg">
-            <img src="/media/moon.png" id="moon">
-            <img src="/media/mountain.png" id="mountain">
-            <img src="/media/road.png" id="road">
+            <img src="./media/bg.jpg" id="bg">
+            <img src="./media/moon.png" id="moon">
+            <img src="./media/mountain.png" id="mountain">
+            <img src="./media/road.png" id="road">
             <h2 id="text">Parallax Effect</h2>
         </section>    
         <div class="info">
